TST-525 - Fix for spacing bug or host rewards progress bars

--- a/assets/scss/custom/layout/_ts-party-summary.scss
+++ b/assets/scss/custom/layout/_ts-party-summary.scss
@@ -240,13 +240,10 @@
                         padding-top: 7px;
                     }
                     .section-title {
+                        margin: 0px 0px 15px !important; 
                         font-weight: normal;
                         text-transform: none;
-                        margin: 0;
                         color: black;
-                    }
-                    .section-title[style] {
-                        margin: 0px 0px 15px !important; 
                     }
                     .progress-container {
                         border-bottom: 5px;
